<resources>
    <string name="app_name">DejaPhoto</string>

    <!-- Strings related to ViewSettings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_changeAlbum">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_ringtone_silent">Silent</string>


    <string name="setting1">Day of Week</string>
    <string name="setting2">Time</string>
    <string name="setting3">Location</string>
    <string name="setting4">Karma</string>
    <string name="start_text">START APP</string>
    <string name="settings_text">Settings</string>


    <string name="title_activity_main">DejaPhoto</string>
    <string name="title_activity_album">Album</string>
    <string name="title_activity_mode">Mode</string>
    <string name="title_activity_set">Settings</string>

    <string name="d_album">Deja Photo</string>
    <string name="c_album">Camera Roll</string>
    <string name="switch_mode">Mode</string>
    <string name="latitude">Location</string>
    <string name="time">Time</string>
    <string name="dow">Day Of The Week</string>
    <string name="karma">Karma</string>

    <string name="deja">Deja</string>
    <string name="photo">Photo</string>

    <string name="minute">Minutes</string>
    <string name="save">Save</string>
    <string name="show">Show</string>
    <string name="prevInterval">Previous time interval in Minutes</string>

    <string name="button1">Choose Album</string>
    <string name="button2">Add Photo</string>
    <string name="button3">Settings</string>
    <string name="button4">Deja Vu Mode</string>
    <string name="button5">Start App</string>
    <string name="button6">Display Interval</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="title_activity_interval">IntervalActivity</string>
    <string name="title_activity_internal">InternalActivity</string>
</resources>
